--- a/Free_Emotions.html
+++ b/Free_Emotions.html
@@ -25,7 +25,7 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 	
-	<script type="text/javascript" src="scriptJQ.js"></script>
+	<script type="text/javascript" src="js/scriptJQ.js"></script>
 
   </head>
 
@@ -95,7 +95,7 @@
   </div>
 </div>
 
-<!-- Galeria de imagens -->
+<!-- gallery de imagens -->
 <!-- Se o umas das imagens for uma fotografia vertical, então é necessario acrescentar à <img> a classe "imagemCube"
       If one of the photos is a vertical photo, then you must add "imagemCube" to the <img>'s class  -->
     <div id="gallery" >
@@ -105,66 +105,66 @@
 		
 		<div class="row text-center text-lg-left " id="QFX">
 		
-		 <div class=" seperador">
+		 <div class=" separator">
 		 <h3>fire work</h3>
 		  </div>
 		
 		
 		<div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-3.jpg" style="object-fit: cover;" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-3.jpg" style="object-fit: cover;" alt="">
           </a>
         </div>
 		
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-4.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-4.jpg" alt="">
           </a>
         </div>
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-5.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-5.jpg" alt="">
           </a>
         </div>
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-6.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-6.jpg" alt="">
           </a>
         </div>
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-7.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-7.jpg" alt="">
           </a>
         </div>
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6" >
           <a  class="d-block mb-2 mt-2 " >
-            <img class="img-fluid " src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-8.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-8.jpg" alt="">
           </a>
         </div>
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6" >
           <a  class="d-block mb-2 mt-2"  >
-            <img class="img-fluid imagemCube" src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-1.jpg" alt="">
+            <img class="img-fluid imagemCube" src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-1.jpg" alt="">
           </a>
         </div>
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 " >
-            <img class="img-fluid imagemCube" src="img/galeria//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-2.jpg"   alt="">
+            <img class="img-fluid imagemCube" src="img/gallery//Belide/Fogo-de-artifício/Fogo_de_artificio[belide]-2.jpg"   alt="">
           </a>
         </div>
 		
-		<div class=" seperador">
+		<div class=" separator">
 		 <h3>Montagem</h3>
 		  </div>
 		  
 		   <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Montagem/Montagem[belide]-1.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Montagem/Montagem[belide]-1.jpg" alt="">
           </a>
         </div>
 		
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria//Belide/Montagem/Montagem[belide]-3.jpg" alt="">
+            <img class="img-fluid " src="img/gallery//Belide/Montagem/Montagem[belide]-3.jpg" alt="">
           </a>
         </div>
 	
