--- a/Galleries.html
+++ b/Galleries.html
@@ -27,7 +27,7 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 	
-	<script type="text/javascript" src="scriptJQ.js"></script>
+	<script type="text/javascript" src="js/scriptJQ.js"></script>
 
   </head>
 
@@ -78,9 +78,9 @@
     </header>
 	
 
-<!-- Lista das galerias de imagens -->
+<!-- Lista das gallerys de imagens -->
 <!-- If the number of galleries is odd , then in the last gallery you must trade col-lg-6  for col-lg-12 
-      Se o número de galerias for ímpar, na última galeira tem que se trocar o col-lg-6  por col-lg-12   -->
+      Se o número de gallerys for ímpar, na última galeira tem que se trocar o col-lg-6  por col-lg-12   -->
     <div id="gallery" >
 
       <div  class="row ">
