--- a/tools.html
+++ b/tools.html
@@ -23,7 +23,7 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 	
-	<script type="text/javascript" src="scriptJQ.js"></script>
+	<script type="text/javascript" src="js/scriptJQ.js"></script>
 
   </head>
 
