--- a/Queima_das_Fitas_2017.html
+++ b/Queima_das_Fitas_2017.html
@@ -25,7 +25,7 @@
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 	
-	<script type="text/javascript" src="scriptJQ.js"></script>
+	<script type="text/javascript" src="js/scriptJQ.js"></script>
 
   </head>
 
@@ -94,7 +94,7 @@
   </div>
 </div>
 
-<!-- Galeria de imagens -->
+<!-- gallery de imagens -->
 <!-- Se o umas das imagens for uma fotografia vertical, então é necessario acrescentar à <img> a classe "imagemCube"
       If one of the photos is a vertical photo, then you must add "imagemCube" to the <img>'s class  -->
     <div id="gallery" >
@@ -104,82 +104,82 @@
 		
 		<div class="row text-center text-lg-left " id="QFX">
 		
-		 <div class=" seperador">
+		 <div class=" separator">
 		 <h3>fire work</h3>
 		  </div>
 		
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6" >
         <a  class="d-block mb-2 mt-2"  >
-          <img class="img-fluid imagemCube" src="img/galeria/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_01.jpg" alt="">
+          <img class="img-fluid imagemCube" src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_01.jpg" alt="">
         </a>
        </div>
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
        <a  class="d-block mb-2 mt-2 " >
-         <img class="img-fluid imagemCube" src="img/galeria/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_02.jpg"   alt="">
+         <img class="img-fluid imagemCube" src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_02.jpg"   alt="">
        </a>
       </div>
 		<div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_03.jpg"  alt="">
+            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_03.jpg"  alt="">
           </a>
         </div>
 		
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_04.jpg" alt="">
+            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_04.jpg" alt="">
           </a>
         </div>
 		 
 		
-		<div class=" seperador">
+		<div class=" separator">
 		 <h3>Montagem</h3>
 		  </div>
 		  
 		   <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_01.jpg" alt="">
+            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_01.jpg" alt="">
           </a>
         </div>
 		
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_02.jpg" alt="">
+            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_02.jpg" alt="">
           </a>
         </div>
       
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
         <a  class="d-block mb-2 mt-2 ">
-          <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_03.jpg" alt="">
+          <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_03.jpg" alt="">
         </a>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
         <a  class="d-block mb-2 mt-2 ">
-          <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_04.jpg" alt="">
+          <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_04.jpg" alt="">
         </a>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
         <a  class="d-block mb-2 mt-2 ">
-          <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_05.jpg" alt="">
+          <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_05.jpg" alt="">
         </a>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
         <a  class="d-block mb-2 mt-2 ">
-          <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_06.jpg" alt="">
+          <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_06.jpg" alt="">
         </a>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
         <a  class="d-block mb-2 mt-2 ">
-          <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_07.jpg" alt="">
+          <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_07.jpg" alt="">
         </a>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
         <a  class="d-block mb-2 mt-2 ">
-          <img class="img-fluid " src="img/galeria/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_08.jpg" alt="">
+          <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Montagem/Pyro-Montagem_170512_08.jpg" alt="">
         </a>
       </div>
 
