Fix broken paths

--- a/Queima_das_Fitas_2017.html
+++ b/Queima_das_Fitas_2017.html
@@ -110,23 +110,23 @@
 		
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6" >
         <a  class="d-block mb-2 mt-2"  >
-          <img class="img-fluid imagemCube" src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_01.jpg" alt="">
+          <img class="img-fluid imagemCube" src="img/gallery/Queima_das_Fitas_2017/firework/Pyro-fogo_170513_01.jpg" alt="">
         </a>
        </div>
       <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
        <a  class="d-block mb-2 mt-2 " >
-         <img class="img-fluid imagemCube" src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_02.jpg"   alt="">
+         <img class="img-fluid imagemCube" src="img/gallery/Queima_das_Fitas_2017/firework/Pyro-fogo_170513_02.jpg"   alt="">
        </a>
       </div>
 		<div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_03.jpg"  alt="">
+            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/firework/Pyro-fogo_170513_03.jpg"  alt="">
           </a>
         </div>
 		
 		 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-6">
           <a  class="d-block mb-2 mt-2 ">
-            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/Fogo-de-Artíficio/Pyro-fogo_170513_04.jpg" alt="">
+            <img class="img-fluid " src="img/gallery/Queima_das_Fitas_2017/firework/Pyro-fogo_170513_04.jpg" alt="">
           </a>
         </div>
 		 
