--- a/Galleries.html
+++ b/Galleries.html
@@ -9,9 +9,14 @@
     <meta name="author" content="">
 
     <title>CA PyroFX</title>
+<!-- Font-awesome-->
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <!-- Bootstrap core CSS -->
-    <link href="libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ <!-- bootstrap-->
+ <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
+
 	
 	<!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -78,9 +83,8 @@
     </header>
 	
 
-<!-- Lista das gallerys de imagens -->
-<!-- If the number of galleries is odd , then in the last gallery you must trade col-lg-6  for col-lg-12 
-      Se o número de gallerys for ímpar, na última galeira tem que se trocar o col-lg-6  por col-lg-12   -->
+<!-- List of image's gallery -->
+<!-- If the number of galleries is odd , then in the last gallery you must trade col-lg-6  for col-lg-12  -->
     <div id="gallery" >
 
       <div  class="row ">
@@ -126,14 +130,6 @@
         <p>Copyright &copy; CA PyroFX 2017</p>
       </div>
     </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="libraries/jquery/jquery.min.js"></script>
-    <script src="libraries/popper/popper.min.js"></script>
-    <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="libraries/jquery-easing/jquery.easing.min.js"></script>
 
   </body>
 
