--- a/Queima_das_Fitas_2017.html
+++ b/Queima_das_Fitas_2017.html
@@ -10,8 +10,14 @@
 
     <title>CA PyroFX</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="libraries/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font-awesome-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <!-- bootstrap-->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
+
 	
 	<!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -95,8 +101,7 @@
 </div>
 
 <!-- gallery de imagens -->
-<!-- Se o umas das imagens for uma fotografia vertical, então é necessario acrescentar à <img> a classe "imagemCube"
-      If one of the photos is a vertical photo, then you must add "imagemCube" to the <img>'s class  -->
+<!-- If one of the photos is a vertical photo, then you must add "imagemCube" to the <img>'s class  -->
     <div id="gallery" >
 
       <div  class="row text-center text-lg-left">
@@ -199,13 +204,7 @@
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="libraries/jquery/jquery.min.js"></script>
-    <script src="libraries/popper/popper.min.js"></script>
-    <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="libraries/jquery-easing/jquery.easing.min.js"></script>
+ 
 
   </body>
 
